changes to calculations